# fuzzy_history

./: Cargo.toml  README.md  fzh.zsh
src/: main.rs
