[package]
name = "fzh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
console = { path = "../crates/console" }
ctrlc = "3.2.5"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
fasthash = "0.4.0"
fuzzy-matcher = "0.3.7"
home = "0.5.4"
indoc = "2.0.1"
lazy_static = "1.4.0"
regex = "1.7.3"
tantivy = "0.19.2"
ulid = "1.0.0"
